--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,11 @@
     <div id="stripe"></div>
     <script>
       const targetElement = document.getElementById('stripe')
+      const modalElement = document.createElement('stripe-element-modal')
+      modalElement.setAttribute('open', true)
       const stripeElement = document.createElement('stripe-card-element');
-      targetElement.appendChild(stripeElement)
+      modalElement.appendChild(stripeElement)
+      targetElement.appendChild(modalElement)
       customElements.whenDefined('stripe-card-element')
         .then(() => {
           stripeElement.initStripe('pk_test_51EMxG7KVC4SfzSeak35hZaAe91cpzKZE9eOQcVWpa7owYJeS30avCAF0lT1QUMKTbzepTIYgAgjly4AmgZuxxkcS00kQ40cBLe')
