fix: demo api key

--- a/example/index.html
+++ b/example/index.html
@@ -82,8 +82,8 @@
             /**
              * Load Stripe Client
              **/
-            await stripePaymentRequestElement.initStripe(demoStripePublishableAPIKey)
-            await stripeElement.initStripe(demoStripePublishableAPIKey)
+            await stripePaymentRequestElement.initStripe(stripePublishableAPIKey)
+            await stripeElement.initStripe(stripePublishableAPIKey)
 
             /**
              * Lauch Payment request button if possible to use
