--- a/example/index.html
+++ b/example/index.html
@@ -8,8 +8,14 @@
     <script nomodule src="/stripe-elements/stripe-elements.js"></script>
   </head>
   <body>
-      <h1>Example2: Launch form as a Modal window</h1>
+      <h1>Example1: Launch form as a Modal window</h1>
       <p>Use modal component and controle these component from JavaScript.</p>
+      <nav>
+        <ul>
+          <li><a href="/">Example1</a></li>
+          <li><a href="/example2.html">Example2</a></li>
+        </ul>
+      </nav>
         <form id="open-modal-form" name="open-modal-form">
             <div id="error-message"></div>
             <fieldset>
