feat: payment-request-button

--- a/example/index.html
+++ b/example/index.html
@@ -111,6 +111,7 @@
              * Set the payment intent client secret
              **/
             stripeElement.setAttribute('payment-intent-client-secret', paymentIntentClientSecret)
+            stripeElement.setAttribute('payment-request-button', true)
 
             /**
              * Disable default form submit event
