breaking-change: rename component prop to drop payment word

--- a/example/example2.html
+++ b/example/example2.html
@@ -22,7 +22,7 @@
           <stripe-payment-sheet
             publishable-key="pk_test_xxxxx"
             show-label="false"
-            payment-intent-client-secret="pi-xxxxxx"
+            intent-client-secret="pi-xxxxxx"
             should-use-default-form-submit-action="false"
           ></stripe-payment-sheet>
       </stripe-element-modal>
