--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
         });
 
       /*
-      const modalElement = document.createElement('stripe-element-modal');
+      const modalElement = document.createElement('stripe-sheet');
       modalElement.setAttribute('open', true);
       const stripeElement = document.createElement('stripe-payment-sheet');
       const stripePaymentRequestElement = document.createElement('stripe-payment-request-button');
