breaking-change: rename from stripe-payment-sheet-modal to stripe-payment-sheet

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 
     <script>
       const targetElement = document.getElementById('stripe');
-      const paymentSheetModal = document.createElement('stripe-payment-sheet-modal')
+      const paymentSheetModal = document.createElement('stripe-payment-sheet')
       targetElement.appendChild(paymentSheetModal);
-      customElements.whenDefined('stripe-payment-sheet-modal')
+      customElements.whenDefined('stripe-payment-sheet')
         .then(() => {
           paymentSheetModal.setAttribute('publishable-key', 'pk_test_51EMxG7KVC4SfzSeak35hZaAe91cpzKZE9eOQcVWpa7owYJeS30avCAF0lT1QUMKTbzepTIYgAgjly4AmgZuxxkcS00kQ40cBLe');
           paymentSheetModal.setAttribute('open', true);
