--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
         .then(() => {
           paymentSheetModal.setAttribute('publishable-key', 'pk_test_51EMxG7KVC4SfzSeak35hZaAe91cpzKZE9eOQcVWpa7owYJeS30avCAF0lT1QUMKTbzepTIYgAgjly4AmgZuxxkcS00kQ40cBLe');
           paymentSheetModal.setAttribute('open', true);
+          //paymentSheetModal.setAttribute('sheet-title', 'Custom')
+          //paymentSheetModal.setAttribute('button-label', 'Custom')
           paymentSheetModal.setPaymentRequestButton({
             country: 'JP',
             currency: 'jpy',
