fix: log the error message on the default submit event

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
           paymentSheetModal.setAttribute('publishable-key', 'pk_test_51EMxG7KVC4SfzSeak35hZaAe91cpzKZE9eOQcVWpa7owYJeS30avCAF0lT1QUMKTbzepTIYgAgjly4AmgZuxxkcS00kQ40cBLe');
           paymentSheetModal.setAttribute('open', true);
           paymentSheetModal.setAttribute('zip', true);
+          paymentSheetModal.setAttribute('intent-client-secret', 'pi_3P03tlKzMYim9cy30Mrnv2xs_secret_xAOM1PdqEDq4mFfg1ff8pOjOm')
           //paymentSheetModal.setAttribute('sheet-title', 'Custom')
           //paymentSheetModal.setAttribute('button-label', 'Custom')
           paymentSheetModal.setPaymentRequestButton({
