--- a/example/example2.html
+++ b/example/example2.html
@@ -8,27 +8,53 @@
     <script nomodule src="/stripe-elements/stripe-elements.js"></script>
   </head>
   <body>
-      <h1>Example2: Simple HTML Element Usage</h1>
-      <p>
-        <strong>Features of this example:</strong>
-      </p>
-      <ul>
-        <li>Write components directly in HTML (declarative approach)</li>
-        <li>Minimal JavaScript, only setting up event listeners</li>
-        <li>Static attribute configuration, simple and easy to understand</li>
-        <li>Ideal for prototypes and simple demos</li>
-        <li>Easy to use with server-side rendering (SSR) or static sites</li>
-      </ul>
-      <p>
-        <strong>Difference from Example1:</strong>
-        Example1 is a flexible implementation that dynamically creates and controls components with JavaScript,
-        while Example2 is a simple implementation written directly in HTML.
-        In real applications, choose the approach that fits your requirements.
-      </p>
-      <p>
-        <strong>Implementation Pattern:</strong>
-      </p>
-      <pre><code>&lt;!-- Declare components directly in HTML --&gt;
+      <nav>
+        <ul>
+          <li><a href="/">Example1: Dynamic Control</a></li>
+          <li><a href="/example2.html">Example2: Static HTML</a></li>
+        </ul>
+      </nav>
+      
+      <div class="container">
+        <div class="demo-section">
+          <h1>Example2: Simple HTML Element Usage</h1>
+          <div id="result"></div>
+          <!-- 
+            Modal component
+            open="true" automatically displays the modal on page load
+          -->
+          <stripe-modal open="true">
+              <stripe-card-element
+                publishable-key="pk_test_xxxxx"
+                show-label="false"
+                intent-client-secret="pi-xxxxxx"
+                should-use-default-form-submit-action="false"
+              ></stripe-card-element>
+          </stripe-modal>
+        </div>
+
+        <div class="docs-section">
+          <h2>Documentation</h2>
+          <p>
+            <strong>Features of this example:</strong>
+          </p>
+          <ul>
+            <li>Write components directly in HTML (declarative approach)</li>
+            <li>Minimal JavaScript, only setting up event listeners</li>
+            <li>Static attribute configuration, simple and easy to understand</li>
+            <li>Ideal for prototypes and simple demos</li>
+            <li>Easy to use with server-side rendering (SSR) or static sites</li>
+          </ul>
+          <p>
+            <strong>Difference from Example1:</strong>
+            Example1 is a flexible implementation that dynamically creates and controls components with JavaScript,
+            while Example2 is a simple implementation written directly in HTML.
+            In real applications, choose the approach that fits your requirements.
+          </p>
+          <p>
+            <strong>Implementation Pattern:</strong>
+          </p>
+          <pre><code>&lt;!-- Declare components directly in HTML --&gt;
 &lt;stripe-modal open="true"&gt;
   &lt;stripe-card-element
     publishable-key="pk_test_xxxxx"
@@ -52,18 +78,10 @@
       });
     });
 &lt;/script&gt;</code></pre>
-      <nav>
-        <ul>
-          <li><a href="/">Example1: Dynamic Control</a></li>
-          <li><a href="/example2.html">Example2: Static HTML</a></li>
-        </ul>
-      </nav>
-      <div id="result"></div>
-
-      <p>
-        <strong>HTML Structure:</strong>
-      </p>
-      <pre><code>&lt;!-- Modal component - open="true" automatically displays the modal on page load --&gt;
+          <p>
+            <strong>HTML Structure:</strong>
+          </p>
+          <pre><code>&lt;!-- Modal component - open="true" automatically displays the modal on page load --&gt;
 &lt;stripe-modal open="true"&gt;
   &lt;stripe-card-element
     publishable-key="pk_test_xxxxx"
@@ -72,31 +90,31 @@
     should-use-default-form-submit-action="false"
   &gt;&lt;/stripe-card-element&gt;
 &lt;/stripe-modal&gt;</code></pre>
-      <p>
-        <strong>Attribute explanation:</strong>
-      </p>
-      <ul>
-        <li><code>publishable-key</code>: Stripe publishable key (starts with "pk_test_" for test environment)</li>
-        <li><code>show-label</code>: Whether to show label (false to hide)</li>
-        <li><code>intent-client-secret</code>: Payment Intent client secret (created on server-side)</li>
-        <li><code>should-use-default-form-submit-action</code>: Whether to use default submit handling (false for custom handling)</li>
-      </ul>
-      <p>
-        <small>Note: This example uses hardcoded values. In real applications, you should dynamically set values from the server-side.</small>
-      </p>
-      <p>
-        <strong>Example with server-side rendering:</strong>
-      </p>
-      <pre><code>&lt;!-- Server-side template example (e.g., PHP, Node.js with EJS) --&gt;
+          <p>
+            <strong>Attribute explanation:</strong>
+          </p>
+          <ul>
+            <li><code>publishable-key</code>: Stripe publishable key (starts with "pk_test_" for test environment)</li>
+            <li><code>show-label</code>: Whether to show label (false to hide)</li>
+            <li><code>intent-client-secret</code>: Payment Intent client secret (created on server-side)</li>
+            <li><code>should-use-default-form-submit-action</code>: Whether to use default submit handling (false for custom handling)</li>
+          </ul>
+          <p>
+            <small>Note: This example uses hardcoded values. In real applications, you should dynamically set values from the server-side.</small>
+          </p>
+          <p>
+            <strong>Example with server-side rendering:</strong>
+          </p>
+          <pre><code>&lt;!-- Server-side template example (e.g., PHP, Node.js with EJS) --&gt;
 &lt;stripe-card-element
   publishable-key="&lt;%= stripePublishableKey %&gt;"
   intent-client-secret="&lt;%= paymentIntentClientSecret %&gt;"
   should-use-default-form-submit-action="false"
 &gt;&lt;/stripe-card-element&gt;</code></pre>
-      <p>
-        <strong>Example with server-side Payment Intent confirmation:</strong>
-      </p>
-      <pre><code>element.addEventListener('formSubmit', async props => {
+          <p>
+            <strong>Example with server-side Payment Intent confirmation:</strong>
+          </p>
+          <pre><code>element.addEventListener('formSubmit', async props => {
   const { detail: { stripe, cardNumberElement } } = props;
   
   // Create Payment Method
@@ -121,10 +139,10 @@
     // Close modal or redirect...
   }
 });</code></pre>
-      <p>
-        <strong>Server-side code example (Node.js):</strong>
-      </p>
-      <pre><code>// Server-side code (Node.js example)
+          <p>
+            <strong>Server-side code example (Node.js):</strong>
+          </p>
+          <pre><code>// Server-side code (Node.js example)
 const stripe = require('stripe')(process.env.STRIPE_SECRET_KEY);
 
 app.post('/confirm-payment', async (req, res) => {
@@ -141,19 +159,8 @@ app.post('/confirm-payment', async (req, res) => {
     res.status(400).json({ error: error.message });
   }
 });</code></pre>
-
-      <!-- 
-        Modal component
-        open="true" automatically displays the modal on page load
-      -->
-      <stripe-modal open="true">
-          <stripe-card-element
-            publishable-key="pk_test_xxxxx"
-            show-label="false"
-            intent-client-secret="pi-xxxxxx"
-            should-use-default-form-submit-action="false"
-          ></stripe-card-element>
-      </stripe-modal>
+        </div>
+      </div>
 
     <script>
         /**
@@ -206,8 +213,92 @@ app.post('/confirm-payment', async (req, res) => {
         
     </script>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        background-color: #e5e5e5;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        background-color: #f5f5f5;
+        line-height: 1.6;
+      }
+      nav {
+        background-color: #fff;
+        padding: 1rem;
+        border-bottom: 1px solid #e0e0e0;
+      }
+      nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        gap: 1rem;
+      }
+      nav a {
+        color: #0066cc;
+        text-decoration: none;
+      }
+      nav a:hover {
+        text-decoration: underline;
+      }
+      .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+      .demo-section,
+      .docs-section {
+        background-color: #fff;
+        padding: 2rem;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      }
+      .demo-section h1,
+      .docs-section h2 {
+        margin-top: 0;
+        color: #333;
+      }
+      .demo-section h1 {
+        font-size: 1.5rem;
+      }
+      .docs-section h2 {
+        font-size: 1.25rem;
+        border-bottom: 2px solid #e0e0e0;
+        padding-bottom: 0.5rem;
+        margin-bottom: 1.5rem;
+      }
+      #result {
+        margin-top: 1.5rem;
+      }
+      pre {
+        background-color: #f5f5f5;
+        padding: 1rem;
+        border-radius: 4px;
+        overflow-x: auto;
+        border: 1px solid #e0e0e0;
+      }
+      code {
+        font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+        font-size: 0.875rem;
+      }
+      pre code {
+        display: block;
+      }
+      @media (max-width: 768px) {
+        .container {
+          grid-template-columns: 1fr;
+          padding: 1rem;
+        }
+        .demo-section {
+          order: 1;
+        }
+        .docs-section {
+          order: 2;
+        }
       }
     </style>
   </body>
