--- a/example/index.html
+++ b/example/index.html
@@ -8,26 +8,67 @@
     <script nomodule src="/stripe-elements/stripe-elements.js"></script>
   </head>
   <body>
-      <h1>Example1: Launch Form as a Modal Window</h1>
-      <p>
-        <strong>Features of this example:</strong>
-      </p>
-      <ul>
-        <li>Dynamically create and control components using JavaScript</li>
-        <li>Accept user input (Stripe API Key, Payment Intent Client Secret)</li>
-        <li>Display card input form inside a modal window</li>
-        <li>Can also use Payment Request Button (Apple Pay, Google Pay, etc.) simultaneously</li>
-        <li>A more flexible implementation pattern closer to real-world applications</li>
-      </ul>
-      <p>
-        <strong>Difference from Example2:</strong>
-        Example2 is a simple example using static HTML tags, while Example1 dynamically generates components
-        and can change settings based on user input, making it a more practical example.
-      </p>
-      <p>
-        <strong>Implementation Pattern:</strong>
-      </p>
-      <pre><code>// 1. Create modal and card element components dynamically
+      <nav>
+        <ul>
+          <li><a href="/">Example1: Dynamic Control</a></li>
+          <li><a href="/example2.html">Example2: Static HTML</a></li>
+        </ul>
+      </nav>
+      
+      <div class="container">
+        <div class="demo-section">
+          <h1>Example1: Launch Form as a Modal Window</h1>
+          <!-- 
+            Get Stripe credentials and Payment Intent from form.
+            In real applications, these values should be obtained from the server-side.
+          -->
+          <form id="open-modal-form" name="open-modal-form">
+              <div id="error-message"></div>
+              <fieldset>
+                  <label>
+                      <lenged>Stripe Publishable API Key</lenged>
+                      <input name="stripe-publishable-api-key" type="text" placeholder="pk_test_..." />
+                      <small>Use a key starting with "pk_test_" for test environment</small>
+                  </label>
+              </fieldset>
+              <fieldset>
+                  <label>
+                      <lenged>Payment Intent Client Secret</lenged>
+                      <p>
+                          <small>You can get this value using Stripe CLI command:</small>
+                          <br/>
+                          <code>stripe payment_intents create --amount=100 --currency=jpy | jq .client_secret -r</code>
+                      </p>
+                      <input name="intent-client-secret" type="text" placeholder="pi_..." />
+                  </label>
+              </fieldset>
+              <button type="submit">Launch Modal</button>
+          </form>
+          <div id="stripe"></div>
+          <div id="result"></div>
+        </div>
+
+        <div class="docs-section">
+          <h2>Documentation</h2>
+          <p>
+            <strong>Features of this example:</strong>
+          </p>
+          <ul>
+            <li>Dynamically create and control components using JavaScript</li>
+            <li>Accept user input (Stripe API Key, Payment Intent Client Secret)</li>
+            <li>Display card input form inside a modal window</li>
+            <li>Can also use Payment Request Button (Apple Pay, Google Pay, etc.) simultaneously</li>
+            <li>A more flexible implementation pattern closer to real-world applications</li>
+          </ul>
+          <p>
+            <strong>Difference from Example2:</strong>
+            Example2 is a simple example using static HTML tags, while Example1 dynamically generates components
+            and can change settings based on user input, making it a more practical example.
+          </p>
+          <p>
+            <strong>Implementation Pattern:</strong>
+          </p>
+          <pre><code>// 1. Create modal and card element components dynamically
 const modalElement = document.createElement('stripe-modal');
 const stripeElement = document.createElement('stripe-card-element-modal');
 const stripePaymentRequestElement = document.createElement('stripe-payment-request-button');
@@ -57,40 +98,8 @@ stripeElement.addEventListener('formSubmit', async (props) => {
 
 // 6. Open modal
 modalElement.setAttribute('open', true);</code></pre>
-      <nav>
-        <ul>
-          <li><a href="/">Example1: Dynamic Control</a></li>
-          <li><a href="/example2.html">Example2: Static HTML</a></li>
-        </ul>
-      </nav>
-        <!-- 
-          Get Stripe credentials and Payment Intent from form.
-          In real applications, these values should be obtained from the server-side.
-        -->
-        <form id="open-modal-form" name="open-modal-form">
-            <div id="error-message"></div>
-            <fieldset>
-                <label>
-                    <lenged>Stripe Publishable API Key</lenged>
-                    <input name="stripe-publishable-api-key" type="text" placeholder="pk_test_..." />
-                    <small>Use a key starting with "pk_test_" for test environment</small>
-                </label>
-            </fieldset>
-            <fieldset>
-                <label>
-                    <lenged>Payment Intent Client Secret</lenged>
-                    <p>
-                        <small>You can get this value using Stripe CLI command:</small>
-                        <br/>
-                        <code>stripe payment_intents create --amount=100 --currency=jpy | jq .client_secret -r</code>
-                    </p>
-                    <input name="intent-client-secret" type="text" placeholder="pi_..." />
-                </label>
-            </fieldset>
-            <button type="submit">Launch Modal</button>
-        </form>
-      <div id="stripe"></div>
-      <div id="result"></div>
+        </div>
+      </div>
 
 
     <script>
@@ -268,8 +277,131 @@ modalElement.setAttribute('open', true);</code></pre>
         })
     </script>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        background-color: #e5e5e5;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        background-color: #f5f5f5;
+        line-height: 1.6;
+      }
+      nav {
+        background-color: #fff;
+        padding: 1rem;
+        border-bottom: 1px solid #e0e0e0;
+      }
+      nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        gap: 1rem;
+      }
+      nav a {
+        color: #0066cc;
+        text-decoration: none;
+      }
+      nav a:hover {
+        text-decoration: underline;
+      }
+      .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+      .demo-section,
+      .docs-section {
+        background-color: #fff;
+        padding: 2rem;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      }
+      .demo-section h1,
+      .docs-section h2 {
+        margin-top: 0;
+        color: #333;
+      }
+      .demo-section h1 {
+        font-size: 1.5rem;
+      }
+      .docs-section h2 {
+        font-size: 1.25rem;
+        border-bottom: 2px solid #e0e0e0;
+        padding-bottom: 0.5rem;
+        margin-bottom: 1.5rem;
+      }
+      form {
+        margin: 1.5rem 0;
+      }
+      fieldset {
+        border: 1px solid #e0e0e0;
+        border-radius: 4px;
+        padding: 1rem;
+        margin-bottom: 1rem;
+      }
+      label {
+        display: block;
+        margin-bottom: 0.5rem;
+      }
+      input[type="text"] {
+        width: 100%;
+        padding: 0.5rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 1rem;
+      }
+      button[type="submit"] {
+        background-color: #0066cc;
+        color: white;
+        padding: 0.75rem 1.5rem;
+        border: none;
+        border-radius: 4px;
+        font-size: 1rem;
+        cursor: pointer;
+      }
+      button[type="submit"]:hover {
+        background-color: #0052a3;
+      }
+      #error-message {
+        color: #d32f2f;
+        margin-bottom: 1rem;
+        padding: 0.5rem;
+        background-color: #ffebee;
+        border-radius: 4px;
+      }
+      #result {
+        margin-top: 1.5rem;
+      }
+      pre {
+        background-color: #f5f5f5;
+        padding: 1rem;
+        border-radius: 4px;
+        overflow-x: auto;
+        border: 1px solid #e0e0e0;
+      }
+      code {
+        font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+        font-size: 0.875rem;
+      }
+      pre code {
+        display: block;
+      }
+      @media (max-width: 768px) {
+        .container {
+          grid-template-columns: 1fr;
+          padding: 1rem;
+        }
+        .demo-section {
+          order: 1;
+        }
+        .docs-section {
+          order: 2;
+        }
       }
     </style>
   </body>
